making chat and rating sections

--- a/src/app/Medical/Body/home/home.component.html
+++ b/src/app/Medical/Body/home/home.component.html
@@ -1,8 +1,8 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center">
     <div class="container">
-      <h1>Welcome to Medilab</h1>
-      <h2>We are team of talanted designers making websites with Bootstrap</h2>
+      <h1>Goodbye doubts</h1>
+      <h2>24/7 Consultation</h2>
       <a href="#about" class="btn-get-started scrollto">Get Started</a>
     </div>
   </section>
@@ -16,10 +16,9 @@
       <div class="row">
         <div class="col-lg-4 d-flex align-items-stretch">
           <div class="content">
-            <h3>Why Choose Medilab?</h3>
+            <h3>Why Choose Herat Medical?</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
-              Asperiores dolores sed et. Tenetur quia eos. Autem tempore quibusdam vel necessitatibus optio ad corporis.
+              For millions of people, Herat Medical is the trusted and familiar home where they know they’ll find a healing touch. It connects them with everything they need to take good care of themselves and their family - assessing health issues, finding the right doctor, booking diagnostic tests, obtaining medicines, storing health records or learning new ways to live healthier.
             </p>
             <div class="text-center">
               <a href="#" class="more-btn">Learn More <i class="bx bx-chevron-right"></i></a>
@@ -32,22 +31,24 @@
               <div class="col-xl-4 d-flex align-items-stretch">
                 <div class="icon-box mt-4 mt-xl-0">
                   <i class="bx bx-receipt"></i>
-                  <h4>Corporis voluptates sit</h4>
-                  <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+                  <h4>Unlimited online doctor Consultation with all specialities</h4>
+                  <p>Become a Herat Medical Plus member and save 60% on your yearly healthcare expenses.</p>
                 </div>
               </div>
               <div class="col-xl-4 d-flex align-items-stretch">
                 <div class="icon-box mt-4 mt-xl-0">
                   <i class="bx bx-cube-alt"></i>
-                  <h4>Ullamco laboris ladore pan</h4>
-                  <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+                  <h4>Corona Sympotms dont panic!</h4>
+                  <p>Free Consultation over audio or video</p>
+                  <p>Order medicines or diagnostic tests</p>
                 </div>
               </div>
               <div class="col-xl-4 d-flex align-items-stretch">
                 <div class="icon-box mt-4 mt-xl-0">
                   <i class="bx bx-images"></i>
-                  <h4>Labore consequatur</h4>
-                  <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
+                  <h4>Let's fight Corona virus together</h4>
+                  <p>Read lates updates about Covid 19</p>
+                  <p>Know about Sympotms, home remedies and more</p>
                 </div>
               </div>
             </div>
