--- a/src/app/Medical/Body/profile/profile.component.html
+++ b/src/app/Medical/Body/profile/profile.component.html
@@ -1,4 +1,4 @@
-<section id="content" class="container mt-">
+<section id="content" class="container" style="margin-top: 10%;">
     <app-profile-header></app-profile-header>
     <app-profile-body></app-profile-body>
 </section>
