--- a/src/app/Medical/footer/footer.component.html
+++ b/src/app/Medical/footer/footer.component.html
@@ -38,7 +38,7 @@
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Join Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+            <p>Get aware of latest updates about Covid-19 and many more diseases.</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
@@ -52,7 +52,7 @@
 
       <div class="mr-md-auto text-center text-md-left">
         <div class="copyright">
-          &copy; Copyright <strong><span>Medilab</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>Herat Medical</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
          
