--- a/src/app/Medical/Body/profile/profile-header/profile-header.component.html
+++ b/src/app/Medical/Body/profile/profile-header/profile-header.component.html
@@ -1,12 +1,12 @@
 <div class="page-heading">
     <div class="media clearfix">
       <div class="media-left pr30">
-        <a href="#">
-          <img class="media-object mw150" src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="...">
+        <a>
+          <img  style="width: 200px; height: 200px;border-radius: 50%;border:1px solid #1977cc" class="media-object mw150" src="assets/img/doctors/{{Data.photo}}" alt="...">
         </a>
       </div>                      
       <div class="media-body va-m">
-        <h2 class="media-heading">Michael Halls
+        <h2 class="media-heading">{{Data.Name}}
           <small> - Profile</small>
         </h2>
         <p class="lead">Lorem ipsum dolor sit amet ctetur adicing elit, sed do eiusmod tempor incididunt</p>
