--- a/src/app/Medical/Body/profile/profile-body/about/about.component.html
+++ b/src/app/Medical/Body/profile/profile-body/about/about.component.html
@@ -7,18 +7,18 @@
     </div>
     <div class="panel-body pb5">
 
-      <h6>Experience</h6>
+      <h6>Professional_Stateme</h6>
 
-      <h4>Facebook Internship</h4>
+      <h4>{{DoctorDataDetails.Professional_Stateme}}</h4> 
       <p class="text-muted"> University of Missouri, Columbia
         <br> Student Health Center, June 2010 - 2012
       </p>
 
       <hr class="short br-lighter">
 
-      <h6>Education</h6>
+      <h6>Practicing From</h6>
 
-      <h4>Bachelor of Science, PhD</h4>
+      <h4>{{DoctorDataDetails.Practicing_From |date}}</h4>
       <p class="text-muted"> University of Missouri, Columbia
         <br> Student Health Center, June 2010 through Aug 2011
       </p>
