--- a/src/app/Medical/Body/profile/profile-header/profile-header.component.html
+++ b/src/app/Medical/Body/profile/profile-header/profile-header.component.html
@@ -4,66 +4,43 @@
         <a>
           <img  style="width: 200px; height: 200px;border-radius: 50%;border:1px solid #1977cc" class="media-object mw150" src="assets/img/doctors/{{Data.photo}}" alt="...">
         </a>
-      </div>                      
-      <div class="media-body va-m">
-        <h2 class="media-heading">{{Data.Name}}
-          <small> - Profile</small>
-        </h2>
-        <p class="lead">Lorem ipsum dolor sit amet ctetur adicing elit, sed do eiusmod tempor incididunt</p>
         <div class="media-links">
-          <ul class="list-inline list-unstyled">
-            <li>
-              <a href="#" title="facebook link">
-                <span class="fa fa-facebook-square fs35 text-primary"></span>
+          <ul class="list-inline list-unstyled" *ngFor="let social of Data.SocialMedia">
+            <li *ngIf="social.Social_Media_Name=='facebook'">
+              <a title="facebook link" href="{{social.Social_Media_Url}}" >
+                <span class="bx bxl-facebook fs25 text-muted"></span>
               </a>
             </li>
-            <li>
-              <a href="#" title="twitter link">
-                <span class="fa fa-twitter-square fs35 text-info"></span>
+            <li *ngIf="social.Social_Media_Name=='instagram'">
+              <a href="{{social.Social_Media_Url}}" title="instagram link">
+                <span class="bx bxl-instagram fs25 text-muted">
+                </span>
               </a>
             </li>
-            <li>
-              <a href="#" title="google plus link">
-                <span class="fa fa-google-plus-square fs35 text-danger"></span>
+            <li *ngIf="social.Social_Media_Name=='whatsapp'">
+              <a title="phone link">
+                <span class="bx bxs-phone-call fs25 text-muted">
+                  {{social.Social_Media_Url}}
+                </span>
               </a>
             </li>
-            <li class="hidden">
-              <a href="#" title="behance link">
-                <span class="fa fa-behance-square fs35 text-primary"></span>
+            <li *ngIf="social.Social_Media_Name=='telegram'">
+              <a title="telegram link" >
+                <span class="bx bxl-telegram fs25 text-muted">
+                  {{social.Social_Media_Url}}
+                </span>
               </a>
             </li>
-            <li class="hidden">
-              <a href="#" title="pinterest link">
-                <span class="fa fa-pinterest-square fs35 text-danger-light"></span>
-              </a>
-            </li>
-            <li class="hidden">
-              <a href="#" title="linkedin link">
-                <span class="fa fa-linkedin-square fs35 text-info"></span>
-              </a>
-            </li>
-            <li class="hidden">
-              <a href="#" title="github link">
-                <span class="fa fa-github-square fs35 text-dark"></span>
-              </a>
-            </li>
-            <li class="">
-              <a href="#" title="phone link">
-                <span class="fa fa-phone-square fs35 text-system"></span>
-              </a>
-            </li>
-            <li>
-              <a href="#" title="email link">
-                <span class="fa fa-envelope-square fs35 text-muted"></span>
-              </a>
-            </li>
-            <li class="hidden">
-              <a href="#" title="external link">
-                <span class="fa fa-external-link-square fs35 text-muted"></span>
-              </a>
-            </li>
+            
           </ul>
         </div>
+      </div>                      
+      <div class="media-body va-m">
+        <h2 class="media-heading">{{Data.Name}} {{Data.lastName}}
+          <small> - Profile</small>
+        </h2>
+        <p class="lead">{{Data.About}}</p>
+       
       </div>
     </div>
 </div>
