--- a/src/app/Medical/Body/profile/profile-body/profile-body.component.html
+++ b/src/app/Medical/Body/profile/profile-body/profile-body.component.html
@@ -1,8 +1,8 @@
 <div class="row"> 
     <div class="col-md-4">
-        <app-popularity-panel></app-popularity-panel>
-        <app-skills></app-skills>
-        <app-about-me></app-about-me>
+        <app-popularity-panel [DoctorData]=Datas></app-popularity-panel>
+        <app-skills [DoctorData]=Datas></app-skills>
+        <app-about-me [DoctorDataDetails]="Datas"></app-about-me>
     </div>
     <div class="col-md-8">
         <div class="tab-block">
