--- a/src/app/Medical/Body/profile/profile-header/profile-header.component.html
+++ b/src/app/Medical/Body/profile/profile-header/profile-header.component.html
@@ -39,7 +39,7 @@
         <h2 class="media-heading">{{Data.Name}} {{Data.lastName}}
           <small> - Profile</small>
         </h2>
-        <p class="lead">{{Data.About}}</p>
+        <p class="lead">{{Data.About | shorten:250}}</p>
        
       </div>
     </div>
