--- a/src/app/Admin/Doctor/doctordashboard.component.html
+++ b/src/app/Admin/Doctor/doctordashboard.component.html
@@ -1,4 +1,11 @@
 <div class="main-wrapper">
+ <app-doctorDashboardHeader></app-doctorDashboardHeader>
+ <app-doctorDashboardMenu></app-doctorDashboardMenu>
+ <!-- <router-outlet></router-outlet> -->
+</div>
+<!-- <div class="sidebar-overlay" data-reff=""></div>
+
+  <div class="main-wrapper">
     <div class="header">
         <div class="header-left">
             <a href="index-2.html" class="logo">
@@ -859,4 +866,4 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
