adding style reference

--- a/src/app/Admin/Doctor/doctorDashboardMenu/doctorDashboardMenu.component.html
+++ b/src/app/Admin/Doctor/doctorDashboardMenu/doctorDashboardMenu.component.html
@@ -4,7 +4,7 @@
             <ul>
                 <li class="menu-title">Main</li>
                 <li class="active">
-                    <a href="index-2.html"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a>
+                    <a routerLink="home"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a>
                 </li>
                 <li>
                     <a href="doctors.html"><i class="fa fa-user-md"></i> <span>Doctors</span></a>
