--- a/src/app/Admin/Doctor/doctorDashboardBody/doctorDashboardBody.component.html
+++ b/src/app/Admin/Doctor/doctorDashboardBody/doctorDashboardBody.component.html
@@ -1,3 +1,7 @@
-<p>
-  doctorDashboardBody works!
-</p>
+<div class="page-wrapper">
+  <div class="content">
+    
+    <router-outlet></router-outlet>
+
+  </div>
+</div>
