--- a/src/app/Admin/Doctor/doctorDashboardHeader/doctorDashboardHeader.component.html
+++ b/src/app/Admin/Doctor/doctorDashboardHeader/doctorDashboardHeader.component.html
@@ -1,7 +1,7 @@
 <div class="header">
     <div class="header-left">
         <a href="index-2.html" class="logo">
-            <img src="assets/img/logo.png" width="35" height="35" alt=""> <span>Preclinic</span>
+            <img src="../../assets/img/logo.png" width="35" height="35" alt=""> <span>Preclinic</span>
         </a>
     </div>
     <a id="toggle_btn" href="javascript:void(0);"><i class="fa fa-bars"></i></a>
@@ -19,7 +19,7 @@
                             <a href="activities.html">
                                 <div class="media">
                                     <span class="avatar">
-                                        <img alt="John Doe" src="assets/img/user.jpg" class="img-fluid">
+                                        <img alt="John Doe" src="../../assets/img/user.jpg" class="img-fluid">
                                     </span>
                                     <div class="media-body">
                                         <p class="noti-details"><span class="noti-title">John Doe</span> added new task <span class="noti-title">Patient appointment booking</span></p>
