--- a/src/app/Admin/Doctor/doctorDashboardBody/chat/chats.component.html
+++ b/src/app/Admin/Doctor/doctorDashboardBody/chat/chats.component.html
@@ -1,4 +1,4 @@
-<div class="chat-main-row">
+<div class="chat-main-row" style="height: 700px;top:50px">
     <div class="chat-main-wrapper">
         <div class="col-lg-9 message-view chat-view">
             <div class="chat-window">
@@ -304,189 +304,6 @@
                                     <span class="input-group-append">
                                         <button class="btn btn-primary" type="button"><i class="fa fa-send"></i></button>
                                     </span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-3 message-view chat-profile-view chat-sidebar" id="chat_sidebar">
-            <div class="chat-window video-window">
-                <div class="fixed-header">
-                    <ul class="nav nav-tabs nav-tabs-bottom">
-                        <li class="nav-item"><a class="nav-link" href="#calls_tab" data-toggle="tab">Calls</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="#profile_tab" data-toggle="tab">Profile</a></li>
-                    </ul>
-                </div>
-                <div class="tab-content chat-contents">
-                    <div class="content-full tab-pane" id="calls_tab">
-                        <div class="chat-wrap-inner">
-                            <div class="chat-box">
-                                <div class="chats">
-                                    <div class="chat chat-left">
-                                        <div class="chat-avatar">
-                                            <a href="profile.html" class="avatar">
-                                                <img alt="Cristina Groves" src="assets/img/doctor-thumb-03.jpg" class="img-fluid rounded-circle">
-                                            </a>
-                                        </div>
-                                        <div class="chat-body">
-                                            <div class="chat-bubble">
-                                                <div class="chat-content">
-                                                    <span class="chat-user">You</span> <span class="chat-time">8:35 am</span>
-                                                    <div class="call-details">
-                                                        <i class="material-icons">phone_missed</i>
-                                                        <div class="call-info">
-                                                            <div class="call-user-details">
-                                                                <span class="call-description">Jeffrey Warden missed the call</span>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="chat chat-left">
-                                        <div class="chat-avatar">
-                                            <a href="profile.html" class="avatar">
-                                                <img alt="Jennifer Robinson" src="assets/img/patient-thumb-02.jpg" class="img-fluid rounded-circle">
-                                            </a>
-                                        </div>
-                                        <div class="chat-body">
-                                            <div class="chat-bubble">
-                                                <div class="chat-content">
-                                                    <span class="chat-user">Jennifer Robinson</span> <span class="chat-time">8:35 am</span>
-                                                    <div class="call-details">
-                                                        <i class="material-icons">call_end</i>
-                                                        <div class="call-info">
-                                                            <div class="call-user-details"><span class="call-description">This call has ended</span></div>
-                                                            <div class="call-timing">Duration: <strong>5 min 57 sec</strong></div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="chat-line">
-                                        <span class="chat-date">January 29th, 2015</span>
-                                    </div>
-                                    <div class="chat chat-left">
-                                        <div class="chat-avatar">
-                                            <a href="profile.html" class="avatar">
-                                                <img alt="Cristina Groves" src="assets/img/doctor-thumb-03.jpg" class="img-fluid rounded-circle">
-                                            </a>
-                                        </div>
-                                        <div class="chat-body">
-                                            <div class="chat-bubble">
-                                                <div class="chat-content">
-                                                    <span class="chat-user">You</span> <span class="chat-time">8:35 am</span>
-                                                    <div class="call-details">
-                                                        <i class="material-icons">ring_volume</i>
-                                                        <div class="call-info">
-                                                            <div class="call-user-details">
-                                                                <a href="#" class="call-description call-description--linked" data-qa="call_attachment_link">Calling Jennifer ...</a>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="content-full tab-pane show active" id="profile_tab">
-                        <div class="display-table">
-                            <div class="table-row">
-                                <div class="table-body">
-                                    <div class="table-content">
-                                        <div class="chat-profile-img">
-                                            <div class="edit-profile-img">
-                                                <img src="assets/img/doctor-03.jpg" alt="">
-                                                <span class="change-img">Change Image</span>
-                                            </div>
-                                            <h3 class="user-name m-t-10 mb-0">Cristina Groves</h3>
-                                            <small class="text-muted">Gynecologist</small>
-                                            <a href="edit-profile.html" class="btn btn-primary edit-btn"><i class="fa fa-pencil"></i></a>
-                                        </div>
-                                        <div class="chat-profile-info">
-                                            <ul class="user-det-list">
-                                                <li>
-                                                    <span>Username:</span>
-                                                    <span class="float-right text-muted">@cristina_groves</span>
-                                                </li>
-                                                <li>
-                                                    <span>DOB:</span>
-                                                    <span class="float-right text-muted">3rd March</span>
-                                                </li>
-                                                <li>
-                                                    <span>Email:</span>
-                                                    <span class="float-right text-muted">cristinagroves@example.com</span>
-                                                </li>
-                                                <li>
-                                                    <span>Phone:</span>
-                                                    <span class="float-right text-muted"> 770-889-6484</span>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                        <div class="transfer-files">
-                                            <ul class="nav nav-tabs nav-tabs-solid nav-justified mb-0">
-                                                <li class="nav-item"><a class="nav-link active" href="#all_files" data-toggle="tab">All Files</a></li>
-                                                <li class="nav-item"><a class="nav-link" href="#my_files" data-toggle="tab">My Files</a></li>
-                                            </ul>
-                                            <div class="tab-content">
-                                                <div class="tab-pane show active" id="all_files">
-                                                    <ul class="files-list">
-                                                        <li>
-                                                            <div class="files-cont">
-                                                                <div class="file-type">
-                                                                    <span class="files-icon"><i class="fa fa-file-pdf-o"></i></span>
-                                                                </div>
-                                                                <div class="files-info">
-                                                                    <span class="file-name text-ellipsis">AHA Selfcare Mobile Application Test-Cases.xls</span>
-                                                                    <span class="file-author"><a href="#">Loren Gatlin</a></span> <span class="file-date">May 31st at 6:53 PM</span>
-                                                                </div>
-                                                                <ul class="files-action">
-                                                                    <li class="dropdown dropdown-action">
-                                                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-h"></i></a>
-                                                                        <div class="dropdown-menu">
-                                                                            <a class="dropdown-item" href="javascript:void(0)">Download</a>
-                                                                            <a class="dropdown-item" href="#" data-toggle="modal" data-target="#share_files">Share</a>
-                                                                        </div>
-                                                                    </li>
-                                                                </ul>
-                                                            </div>
-                                                        </li>
-                                                    </ul>
-                                                </div>
-                                                <div class="tab-pane" id="my_files">
-                                                    <ul class="files-list">
-                                                        <li>
-                                                            <div class="files-cont">
-                                                                <div class="file-type">
-                                                                    <span class="files-icon"><i class="fa fa-file-pdf-o"></i></span>
-                                                                </div>
-                                                                <div class="files-info">
-                                                                    <span class="file-name text-ellipsis">AHA Selfcare Mobile Application Test-Cases.xls</span>
-                                                                    <span class="file-author"><a href="#">John Doe</a></span> <span class="file-date">May 31st at 6:53 PM</span>
-                                                                </div>
-                                                                <ul class="files-action">
-                                                                    <li class="dropdown dropdown-action">
-                                                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-h"></i></a>
-                                                                        <div class="dropdown-menu">
-                                                                            <a class="dropdown-item" href="javascript:void(0)">Download</a>
-                                                                            <a class="dropdown-item" href="#" data-toggle="modal" data-target="#share_files">Share</a>
-                                                                        </div>
-                                                                    </li>
-                                                                </ul>
-                                                            </div>
-                                                        </li>
-                                                    </ul>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
                                 </div>
                             </div>
                         </div>
