profile and edit profile added

--- a/src/app/Admin/Doctor/doctorDashboardMenu/doctorDashboardMenu.component.html
+++ b/src/app/Admin/Doctor/doctorDashboardMenu/doctorDashboardMenu.component.html
@@ -21,7 +21,7 @@
                     <ul id="collapseBasic" [collapse]="isCollapsed" [isAnimated]="true">
                         <li><a routerLink="./email">Compose Mail</a></li>
                         <li><a routerLink="./email/inbox">Inbox</a></li>
-                        <li><a href="mail-view.html">Mail View</a></li>
+                        <li><a routerLink="./email/mailview">Mail View</a></li>
                     </ul>
                 </li>
 
