configuring some routes

--- a/src/app/Admin/Doctor/doctorDashboardBody/Email/view-email/view-email.component.html
+++ b/src/app/Admin/Doctor/doctorDashboardBody/Email/view-email/view-email.component.html
@@ -27,7 +27,7 @@
                     </div>
                     <div class="sender-info">
                         <div class="sender-img">
-                            <img width="40" alt="" src="assets/img/user.jpg" class="rounded-circle">
+                            <img width="40" alt="" src="../../../../assets/img/user.jpg" class="rounded-circle">
                         </div>
                         <div class="receiver-details float-left">
                             <span class="sender-name">John Doe (johnjoe@example.com)</span>
@@ -67,14 +67,14 @@
                         </div>
                     </li>
                     <li>
-                        <div class="attach-file"><img src="../../../../assets/img/placeholder.jpg"></div>
+                        <div class="attach-file"><img src="assets/img/placeholder.jpg"></div>
                         <div class="attach-info">
                             <a href="#" class="attach-filename">webdesign.png</a>
                             <div class="attach-fileize"> 1.42 MB</div>
                         </div>
                     </li>
                     <li>
-                        <div class="attach-file"><img src="../../../../assets/img/placeholder.jpg"></div>
+                        <div class="attach-file"><img src="assets/img/placeholder.jpg"></div>
                         <div class="attach-info">
                             <a href="#" class="attach-filename">webdevelopment.png</a>
                             <div class="attach-fileize"> 1.1 MB</div>
