--- a/src/app/Admin/Doctor/doctorDashboardBody/dashboard/dashboard.component.html
+++ b/src/app/Admin/Doctor/doctorDashboardBody/dashboard/dashboard.component.html
@@ -117,7 +117,7 @@
                                 <li>
                                     <div class="contact-cont">
                                         <div class="float-left user-img m-r-10">
-                                            <a href="profile.html" title="John Doe"><img src="../../../../../assets/img/doctors/khaled.jpg" alt="" class="w-40 rounded-circle"><span class="status online"></span></a>
+                                            <a routerLink="../extra" title="John Doe"><img src="../../../../../assets/img/doctors/khaled.jpg" alt="" class="w-40 rounded-circle"><span class="status online"></span></a>
                                         </div>
                                         <div class="contact-info">
                                             <span class="contact-name text-ellipsis">John Doe</span>
@@ -128,7 +128,7 @@
                                 <li>
                                     <div class="contact-cont">
                                         <div class="float-left user-img m-r-10">
-                                            <a href="profile.html" title="Richard Miles"><img src="../../../../../assets/img/doctors/shahram.jpg" alt="" class="w-40 rounded-circle"><span class="status offline"></span></a>
+                                            <a routerLink="../extra" title="Richard Miles"><img src="../../../../../assets/img/doctors/shahram.jpg" alt="" class="w-40 rounded-circle"><span class="status offline"></span></a>
                                         </div>
                                         <div class="contact-info">
                                             <span class="contact-name text-ellipsis">Richard Miles</span>
@@ -139,7 +139,7 @@
                                 <li>
                                     <div class="contact-cont">
                                         <div class="float-left user-img m-r-10">
-                                            <a href="profile.html" title="John Doe"><img src="../../../../../assets/img/doctors/khaled.jpg" alt="" class="w-40 rounded-circle"><span class="status away"></span></a>
+                                            <a routerLink="../extra" title="John Doe"><img src="../../../../../assets/img/doctors/khaled.jpg" alt="" class="w-40 rounded-circle"><span class="status away"></span></a>
                                         </div>
                                         <div class="contact-info">
                                             <span class="contact-name text-ellipsis">John Doe</span>
