--- a/src/app/Admin/Doctor/doctorDashboardBody/extrapages/myprofile/myprofile.component.html
+++ b/src/app/Admin/Doctor/doctorDashboardBody/extrapages/myprofile/myprofile.component.html
@@ -4,7 +4,7 @@
     </div>
 
     <div class="col-sm-5 col-6 text-right m-b-30">
-        <a href="edit-profile.html" class="btn btn-primary btn-rounded"><i class="fa fa-plus"></i> Edit Profile</a>
+        <a routerLink="./edit" class="btn btn-primary btn-rounded"><i class="fa fa-plus"></i> Edit Profile</a>
     </div>
 </div>
 <div class="card-box profile-header">
@@ -23,7 +23,7 @@
                                 <h3 class="user-name m-t-0 mb-0">Cristina Groves</h3>
                                 <small class="text-muted">Gynecologist</small>
                                 <div class="staff-id">Employee ID : DR-0001</div>
-                                <div class="staff-msg"><a href="chat.html" class="btn btn-primary">Send Message</a></div>
+                                <div class="staff-msg"><a routerLink="../../chats" class="btn btn-primary">Send Message</a></div>
                             </div>
                         </div>
                         <div class="col-md-7">
