--- a/src/app/Admin/Doctor/doctorDashboardHeader/doctorDashboardHeader.component.html
+++ b/src/app/Admin/Doctor/doctorDashboardHeader/doctorDashboardHeader.component.html
@@ -82,10 +82,10 @@
         <li class="nav-item dropdown d-none d-sm-block">
             <a href="javascript:void(0);" id="open_msg_box" class="hasnotifications nav-link"><i class="fa fa-comment-o"></i> <span class="badge badge-pill bg-danger float-right">8</span></a>
         </li>
-        <li class="nav-item dropdown has-arrow">
+        <!-- <li class="nav-item dropdown has-arrow">
             <a href="#" class="dropdown-toggle nav-link user-link" data-toggle="dropdown">
                 <span class="user-img">
-                    <img class="rounded-circle" src="assets/img/user.jpg" width="24" alt="Admin">
+                    <img class="rounded-circle" src="../../assets/img/user.jpg" width="24">
                     <span class="status online"></span>
                 </span>
                 <span>Admin</span>
@@ -96,7 +96,23 @@
                 <a class="dropdown-item" href="settings.html">Settings</a>
                 <a class="dropdown-item" href="login.html">Logout</a>
             </div>
-        </li>
+        </li> -->
+        <div class="btn-group" dropdown>
+            <button style="background-color: #009efb;" id="button-basic" dropdownToggle type="button" class="btn btn-primary dropdown-toggle"
+                    aria-controls="dropdown-basic">
+                    <img class="rounded-circle" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTTOkHm3_mPQ5PPRvGtU6Si7FJg8DVDtZ47rw&usqp=CAU" width="24">
+                    <span class="status online"></span> My Profile <span class="caret"></span>
+            </button>
+            <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu"
+                role="menu" aria-labelledby="button-basic">
+              <li role="menuitem"><a class="dropdown-item" routerLink="./extra">My Profile</a></li>
+              <li role="menuitem"><a class="dropdown-item" routerLink="./extra/edit">Edit Profile</a></li>
+              <li role="menuitem"><a class="dropdown-item" href="#">Settings</a></li>
+              <li class="divider dropdown-divider"></li>
+              <li role="menuitem"><a class="dropdown-item" href="#">Logout</a>
+              </li>
+            </ul>
+          </div>
     </ul>
     <div class="dropdown mobile-user-menu float-right">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-v"></i></a>
